--- a/RESUME.html
+++ b/RESUME.html
@@ -17,6 +17,18 @@
         }  
         .contact-info{
             margin-bottom: 20px;
+            margin-right: 90%;
+        }
+        ul.skills{
+            list-style-type: none;
+            padding: 0;
+        }
+        ul.skills li{
+            background-color: #e67e22;
+            color: white;
+            margin: 5px 0;
+            border-radius: 4px;
+            text-align: left;
         }
         .section-title{
             font-size: 1.2em;
@@ -40,15 +52,22 @@
 <p>I’m a student at the <a href="https://www.ub.edu.bz/">University of Belize</a>, working towards an associate's degree in IT. 
     I to  use my skills to contribute to tech projects and keep learning more about the field.</p>
 
-<div>List of skills:</div>
-<ul>
+<h2 class="section-title">Skills</h2>
+<ul class="skills">
     <li>HTML</li>
     <li>C++</li>
     <li>PYTHON</li>
     <li>CSS</li>
 </ul>
-
-
     
+<h2 class="section-title">Education</h2>
+<p><strong>University of Belize</strong>
+-Associate's Drgree in Information Technology(2024-Present)</p>
+
+<h2 class="section-title">Projects</h2>
+<ul>
+    <li>Created a basic website using HTML AND CSS for a class project.</li>
+    <li>Worked on Python script to analyze data for self project.</li>
+</ul>
 </body>
 </html>
