--- a/RESUME.html
+++ b/RESUME.html
@@ -58,6 +58,7 @@
     <li>C++</li>
     <li>PYTHON</li>
     <li>CSS</li>
+    <li>Java Skript</li>
 </ul>
     
 <h2 class="section-title">Education</h2>
